--- a/Coplt.Dropping/Coplt.Dropping.csproj
+++ b/Coplt.Dropping/Coplt.Dropping.csproj
@@ -5,6 +5,13 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>12.0</LangVersion>
+        <Version>0.1.0</Version>
+        <Description>Auto gen dispose pattern</Description>
+        <RepositoryUrl>https://github.com/2A5F/Coplt.Dropping</RepositoryUrl>
+        <PackageTags>roslyn analyzers;dispose;source generator</PackageTags>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
 
     <ItemGroup>
@@ -12,6 +19,8 @@
     </ItemGroup>
 
     <ItemGroup>
+        <None Include="..\LICENSE.md" Pack="true" PackagePath="\"/>
+        <None Include="..\README.md" Pack="true" PackagePath="\"/>
         <None Include="..\Coplt.Dropping.Analyzers\bin\Release\netstandard2.0\Coplt.Dropping.Analyzers.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false"/>
     </ItemGroup>
 
