--- a/Coplt.Dropping/Coplt.Dropping.csproj
+++ b/Coplt.Dropping/Coplt.Dropping.csproj
@@ -5,7 +5,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>12.0</LangVersion>
-        <Version>0.5.0</Version>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <Version>0.5.1</Version>
         <Description>Auto gen dispose pattern</Description>
         <RepositoryUrl>https://github.com/2A5F/Coplt.Dropping</RepositoryUrl>
         <PackageTags>roslyn analyzers;dispose;source generator</PackageTags>
